--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,7 @@
   "manifest_version" : 2,
   "name": "Chromark",
   "version": "0.0.1",
+  "offline_enabled": true,
   "permissions": [
     {
       "fileSystem": [
